--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   },
   "devDependencies": {
     "@firebase/rules-unit-testing": "^2.0.7",
+    "firebase-functions-test": "^3.1.0",
     "jest": "^29.7.0",
-    "firebase-functions-test": "^3.1.0"
+    "puppeteer": "^24.29.1"
   },
   "jest": {
     "testEnvironment": "node",
-    "setupFilesAfterEnv": ["<rootDir>/tests/setup-simple.js"],
+    "setupFilesAfterEnv": [
+      "<rootDir>/tests/setup-simple.js"
+    ],
     "testMatch": [
       "<rootDir>/tests/simple.test.js",
       "<rootDir>/tests/unit/**/*.test.js",
@@ -29,5 +32,8 @@
       "functions/**/*.js",
       "!**/node_modules/**"
     ]
+  },
+  "dependencies": {
+    "firebase-tools": "^14.24.1"
   }
 }
